--- a/css/styles.css
+++ b/css/styles.css
@@ -554,11 +554,9 @@ ul .our-team-icons {
 
 .modal-content {
   margin: auto;
-  position: fixed;
+  position: relative;
   width: 408px;
   height: 584px;
-  top: 80px;
-  left: 516px;
   border-radius: 4px;
   background-color: rgba(252, 252, 252, 1);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
