--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,8 +8,8 @@ body {
   line-height: 24px;
   letter-spacing: 0.02em;
   text-align: center;
-  margin: 0 auto;
-  width: 428px;
+  width: 100%;
+  margin: auto;
 }
 
 h1 {
